fixed: when printing long text it overflows into the question below, https://github.com/OpenClinica/enketo-express-oc/issues/312

--- a/src/sass/core/_print.scss
+++ b/src/sass/core/_print.scss
@@ -194,6 +194,10 @@ input[type=checkbox] {
         display: none !important;
     }
 
+    .print-input-text {
+        height: auto;
+    }
+
     .or-hint.active {
         color: black;
         display: block;
